--- a/res/layout/repeat.xml
+++ b/res/layout/repeat.xml
@@ -7,18 +7,18 @@
 		android:orientation="vertical">
 		<TextView android:id="@+id/TextView01" android:layout_width="fill_parent"
 			android:gravity="top|center_horizontal" android:text="This transaction will not repeat."
-			android:layout_height="wrap_content"></TextView>
+			android:layout_height="wrap_content" />
 		<LinearLayout android:id="@+id/LinearLayout07"
 			android:layout_height="wrap_content" android:layout_weight="1"
 			android:layout_width="fill_parent">
 			<Button android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:id="@+id/neverSaveButton"
 				android:layout_weight="1" android:text="@string/save"
-				android:layout_gravity="bottom"></Button>
+				android:layout_gravity="bottom" />
 			<Button android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:id="@+id/neverCancelButton"
 				android:layout_weight="1" android:text="@string/cancel"
-				android:layout_gravity="bottom"></Button>
+				android:layout_gravity="bottom" />
 		</LinearLayout>
 	</LinearLayout>
 	<LinearLayout android:id="@+id/repeat_daily"
@@ -28,22 +28,21 @@
 			android:layout_height="wrap_content" android:layout_width="fill_parent">
 			<TextView android:id="@+id/TextView02" android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:text="Every:"
-				android:layout_weight="1" android:layout_gravity="center_vertical"></TextView>
+				android:layout_weight="1" android:layout_gravity="center_vertical" />
 			<EditText android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:id="@+id/dayEdit"
-				android:maxWidth="150px" android:text="1" android:inputType="number"></EditText>
-
+				android:maxWidth="150px" android:text="1" android:inputType="number" />
 			<TextView android:id="@+id/TextView03" android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:layout_gravity="center_vertical"
-				android:paddingLeft="5px" android:text="Day(s)"></TextView>
+				android:paddingLeft="5px" android:text="Day(s)" />
 		</LinearLayout>
 		<LinearLayout android:id="@+id/LinearLayout02"
 			android:layout_height="wrap_content" android:layout_width="fill_parent">
 			<TextView android:id="@+id/TextView04" android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:layout_weight="1"
-				android:text="End On:" android:layout_gravity="center_vertical"></TextView>
+				android:text="End On:" android:layout_gravity="center_vertical" />
 			<Spinner android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:id="@+id/daySpinner"></Spinner>
+				android:layout_height="wrap_content" android:id="@+id/daySpinner" />
 		</LinearLayout>
 		<LinearLayout android:id="@+id/LinearLayout07"
 			android:layout_height="wrap_content" android:layout_weight="1"
@@ -51,11 +50,11 @@
 			<Button android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:id="@+id/daySaveButton"
 				android:layout_weight="1" android:text="@string/save"
-				android:layout_gravity="bottom"></Button>
+				android:layout_gravity="bottom" />
 			<Button android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:id="@+id/dayCancelButton"
 				android:layout_weight="1" android:text="@string/cancel"
-				android:layout_gravity="bottom"></Button>
+				android:layout_gravity="bottom" />
 		</LinearLayout>
 	</LinearLayout>
 	<ScrollView android:id="@+id/repeat_weekly"
@@ -70,24 +69,24 @@
 				<TextView android:id="@+id/TextView02"
 					android:layout_width="wrap_content" android:layout_height="wrap_content"
 					android:text="Every:" android:layout_weight="1"
-					android:layout_gravity="center_vertical"></TextView>
+					android:layout_gravity="center_vertical" />
 				<EditText android:layout_width="wrap_content"
 					android:layout_height="wrap_content" android:id="@+id/weekEdit"
-					android:maxWidth="150px" android:text="1" android:inputType="number"></EditText>
+					android:maxWidth="150px" android:text="1" android:inputType="number" />
 
 				<TextView android:id="@+id/TextView03"
 					android:layout_width="wrap_content" android:layout_height="wrap_content"
 					android:layout_gravity="center_vertical" android:paddingLeft="5px"
-					android:text="Week(s)"></TextView>
+					android:text="Week(s)" />
 			</LinearLayout>
 			<LinearLayout android:id="@+id/LinearLayout02"
 				android:layout_height="wrap_content" android:layout_width="fill_parent">
 				<TextView android:id="@+id/TextView04"
 					android:layout_width="wrap_content" android:layout_height="wrap_content"
 					android:layout_weight="1" android:text="End On:"
-					android:layout_gravity="center_vertical"></TextView>
+					android:layout_gravity="center_vertical" />
 				<Spinner android:layout_width="wrap_content"
-					android:layout_height="wrap_content" android:id="@+id/weekSpinner"></Spinner>
+					android:layout_height="wrap_content" android:id="@+id/weekSpinner" />
 
 			</LinearLayout>
 			<LinearLayout android:id="@+id/LinearLayout03"
@@ -95,7 +94,7 @@
 				<TextView android:id="@+id/TextView05"
 					android:layout_width="wrap_content" android:layout_height="wrap_content"
 					android:text="Repeat On:" android:layout_weight="1"
-					android:layout_gravity="center_vertical"></TextView>
+					android:layout_gravity="center_vertical" />
 				<LinearLayout android:id="@+id/LinearLayout04"
 					android:layout_width="wrap_content" android:layout_height="wrap_content"
 					android:orientation="vertical">
@@ -103,44 +102,44 @@
 						android:layout_height="wrap_content" android:layout_width="fill_parent">
 						<ToggleButton android:id="@+id/ToggleButton01"
 							android:layout_width="wrap_content" android:layout_height="wrap_content"
-							android:layout_weight="1"></ToggleButton>
+							android:layout_weight="1" />
 						<ToggleButton android:id="@+id/ToggleButton02"
 							android:layout_width="wrap_content" android:layout_height="wrap_content"
-							android:layout_weight="1"></ToggleButton>
+							android:layout_weight="1" />
 						<ToggleButton android:id="@+id/ToggleButton03"
 							android:layout_width="wrap_content" android:layout_height="wrap_content"
-							android:layout_weight="1"></ToggleButton>
+							android:layout_weight="1" />
 					</LinearLayout>
 					<LinearLayout android:id="@+id/LinearLayout06"
 						android:layout_height="wrap_content" android:layout_width="fill_parent">
 						<ToggleButton android:id="@+id/ToggleButton04"
 							android:layout_width="wrap_content" android:layout_height="wrap_content"
-							android:layout_weight="1"></ToggleButton>
+							android:layout_weight="1" />
 						<ToggleButton android:id="@+id/ToggleButton05"
 							android:layout_width="wrap_content" android:layout_height="wrap_content"
-							android:layout_weight="1"></ToggleButton>
+							android:layout_weight="1" />
 						<ToggleButton android:id="@+id/ToggleButton06"
 							android:layout_width="wrap_content" android:layout_height="wrap_content"
-							android:layout_weight="1"></ToggleButton>
+							android:layout_weight="1" />
 						<ToggleButton android:id="@+id/ToggleButton07"
 							android:layout_width="wrap_content" android:layout_height="wrap_content"
-							android:layout_weight="1"></ToggleButton>
+							android:layout_weight="1" />
 					</LinearLayout>
 				</LinearLayout>
 			</LinearLayout>
 			<TextView android:id="@+id/TextView06" android:layout_width="wrap_content"
-				android:layout_height="wrap_content"></TextView>
+				android:layout_height="wrap_content" />
 			<LinearLayout android:id="@+id/LinearLayout07"
 				android:layout_height="wrap_content" android:layout_weight="1"
 				android:layout_width="fill_parent">
 				<Button android:layout_width="wrap_content"
 					android:layout_height="wrap_content" android:id="@+id/weekSaveButton"
 					android:layout_weight="1" android:text="@string/save"
-					android:layout_gravity="bottom"></Button>
+					android:layout_gravity="bottom" />
 				<Button android:layout_width="wrap_content"
 					android:layout_height="wrap_content" android:id="@+id/weekCancelButton"
 					android:layout_weight="1" android:text="@string/cancel"
-					android:layout_gravity="bottom"></Button>
+					android:layout_gravity="bottom" />
 			</LinearLayout>
 		</LinearLayout>
 	</ScrollView>
@@ -151,29 +150,29 @@
 			android:layout_height="wrap_content" android:layout_width="fill_parent">
 			<TextView android:id="@+id/TextView02" android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:text="Every:"
-				android:layout_weight="1" android:layout_gravity="center_vertical"></TextView>
+				android:layout_weight="1" android:layout_gravity="center_vertical" />
 			<EditText android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:id="@+id/monthEdit"
-				android:maxWidth="150px" android:text="1" android:inputType="number"></EditText>
+				android:maxWidth="150px" android:text="1" android:inputType="number" />
 			<TextView android:id="@+id/TextView03" android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:layout_gravity="center_vertical"
-				android:text="Month(s)" android:paddingLeft="5px"></TextView>
+				android:text="Month(s)" android:paddingLeft="5px" />
 		</LinearLayout>
 		<LinearLayout android:id="@+id/LinearLayout02"
 			android:layout_height="wrap_content" android:layout_width="fill_parent">
 			<TextView android:id="@+id/TextView04" android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:layout_weight="1"
-				android:text="End On:" android:layout_gravity="center_vertical"></TextView>
+				android:text="End On:" android:layout_gravity="center_vertical" />
 			<Spinner android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:id="@+id/monthSpinner"></Spinner>
+				android:layout_height="wrap_content" android:id="@+id/monthSpinner" />
 		</LinearLayout>
 		<LinearLayout android:id="@+id/LinearLayout03"
 			android:layout_height="wrap_content" android:layout_width="fill_parent">
 			<TextView android:id="@+id/TextView05" android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:layout_weight="1"
-				android:layout_gravity="center_vertical" android:text="Repeat By:"></TextView>
+				android:layout_gravity="center_vertical" android:text="Repeat By:" />
 			<Spinner android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:id="@+id/repeatBySpinner"></Spinner>
+				android:layout_height="wrap_content" android:id="@+id/repeatBySpinner" />
 		</LinearLayout>
 		<LinearLayout android:id="@+id/LinearLayout07"
 			android:layout_height="wrap_content" android:layout_weight="1"
@@ -181,11 +180,11 @@
 			<Button android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:id="@+id/monthSaveButton"
 				android:layout_weight="1" android:text="@string/save"
-				android:layout_gravity="bottom"></Button>
+				android:layout_gravity="bottom" />
 			<Button android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:id="@+id/monthCancelButton"
 				android:layout_weight="1" android:text="@string/cancel"
-				android:layout_gravity="bottom"></Button>
+				android:layout_gravity="bottom" />
 		</LinearLayout>
 	</LinearLayout>
 	<LinearLayout android:layout_height="fill_parent"
@@ -195,21 +194,21 @@
 			android:layout_height="wrap_content" android:layout_width="fill_parent">
 			<TextView android:id="@+id/TextView02" android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:text="Every:"
-				android:layout_weight="1" android:layout_gravity="center_vertical"></TextView>
+				android:layout_weight="1" android:layout_gravity="center_vertical" />
 			<EditText android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:id="@+id/yearEdit"
-				android:maxWidth="150px" android:text="1" android:inputType="number"></EditText>
+				android:maxWidth="150px" android:text="1" android:inputType="number" />
 			<TextView android:id="@+id/TextView03" android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:layout_gravity="center_vertical"
-				android:paddingLeft="5px" android:text="Year(s)"></TextView>
+				android:paddingLeft="5px" android:text="Year(s)" />
 		</LinearLayout>
 		<LinearLayout android:id="@+id/LinearLayout02"
 			android:layout_height="wrap_content" android:layout_width="fill_parent">
 			<TextView android:id="@+id/TextView04" android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:layout_weight="1"
-				android:text="End On:" android:layout_gravity="center_vertical"></TextView>
+				android:text="End On:" android:layout_gravity="center_vertical" />
 			<Spinner android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:id="@+id/yearSpinner"></Spinner>
+				android:layout_height="wrap_content" android:id="@+id/yearSpinner" />
 		</LinearLayout>
 		<LinearLayout android:id="@+id/LinearLayout07"
 			android:layout_height="wrap_content" android:layout_weight="1"
@@ -217,11 +216,11 @@
 			<Button android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:id="@+id/yearSaveButton"
 				android:layout_weight="1" android:text="@string/save"
-				android:layout_gravity="bottom"></Button>
+				android:layout_gravity="bottom" />
 			<Button android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:id="@+id/yearCancelButton"
 				android:layout_weight="1" android:text="@string/cancel"
-				android:layout_gravity="bottom"></Button>
+				android:layout_gravity="bottom" />
 		</LinearLayout>
 	</LinearLayout>
 </FrameLayout>
