--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -78,6 +78,9 @@
 			android:summary="Color negative balances in account summaries."
 			android:key="color_balance" />
 	</PreferenceScreen>
+	<CheckBoxPreference android:key="total_balance"
+		android:title="Total Balance" android:summary="Enables a total balance display in the account list."
+		android:defaultValue="true" />
 	<CheckBoxPreference android:summary="Enables fonts larger than default for most text."
 		android:key="large_fonts" android:title="Large Fonts" />
 	<PreferenceCategory android:title="Security"
