--- a/res/layout/premium.xml
+++ b/res/layout/premium.xml
@@ -21,13 +21,12 @@
 			android:layout_width="fill_parent" android:textSize="18px"
 			android:layout_marginLeft="15px" android:text="@string/p_more" />
 		<LinearLayout android:layout_height="wrap_content"
-			android:orientation="horizontal" android:layout_width="wrap_content"
-			android:gravity="center_horizontal" android:layout_gravity="center_horizontal"
-			android:layout_marginTop="8px">
+			android:orientation="horizontal" android:gravity="center_horizontal" android:layout_gravity="center_horizontal"
+			android:layout_marginTop="8px" android:layout_width="fill_parent">
 			<ImageView android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:src="@drawable/color_picker_small" />
+				android:layout_height="wrap_content" android:src="@drawable/color_picker_small" android:layout_gravity="center"/>
 			<ImageView android:layout_width="wrap_content"
-				android:layout_height="wrap_content" />
+				android:layout_height="wrap_content" android:src="@drawable/chart_small" android:layout_gravity="center" android:layout_marginLeft="10px"/>
 		</LinearLayout>
 	</LinearLayout>
 	<Button android:layout_height="wrap_content"
